@@ -32,6 +32,7 @@ scripts/bed2bedGraph.pl
 scripts/bed2nt2aa.pl
 scripts/bed6_to_bed12.pl
 scripts/gff2bed.pl
+scripts/fasta_splitter.pl
 scripts/kmer_analysis.pl
 scripts/MEME_xml_motif_extractor.pl
 scripts/newUCSCdb.pl
