@@ -169,6 +169,7 @@ Revision history for Perl extension Bio::ViennaNGS.
 	- refactored scripts/bam_uniq.pl
 	- refactored scripts/bed2nt2aa.pl
 	- added scripts/fasub.pl
+	- added scripts/fasta_splitter.pl
 	- updated POD
 	- removed Tutorial_pipeline0{1,2}
 	- added unit tests
